metadata/1.0.6/it.md
# trackCO2 — App Store Connect Metadata

**Version:** 1.0.6  
**Locale:** Italian  
**Locale code:** `it`

---

## App Information

| Field | Value | Limit | Count |
|---|---|---|---|
| **Name** | trackCO2 | 30 | 8 |
| **Subtitle** | Monitora la tua impronta di CO₂ | 30 | 30 |
| **Promotional Text** | Scopri Claud — la tua mascotte nuvola che reagisce al tuo punteggio CO₂. Registra attività, pianifica viaggi più green e ricevi suggerimenti basati sul meteo. | 170 | 138 |

---

## Keywords

```
carbonio,CO2,clima,sostenibilità,eco,trasporti,salute,meteo,consigli,impronta,ambiente
```

**Limit:** 100 characters · **Count:** 82

---

## Description

trackCO2 ti aiuta a capire e ridurre la tua impronta di carbonio personale — un giorno alla volta.

Registra le attività che contano: guida, voli, trasporto pubblico, alimentazione, energia domestica, camminata, bici, piantumazione di alberi e riciclaggio. Visualizza consumo e compensazione di CO₂ durante la settimana con grafici e riepiloghi chiari.

**Scopri Claud, la tua mascotte del carbonio**  
Claud è una nuvola amichevole che riflette la tua salute CO₂ settimanale. Fai scelte più green e guarda Claud prosperare.

**Pianifica viaggi più sostenibili**  
Confronta le opzioni di trasporto sulla mappa integrata. I percorsi sono ordinati per impatto CO₂ — l'opzione più green è sempre la prima. Salva i viaggi direttamente nel registro attività.

**Sincronizza con Apple Health**  
Importa automaticamente passi e distanza camminata/corsa da HealthKit. Trasforma i movimenti quotidiani in compensazione registrata senza sforzo extra.

**Suggerimenti basati sul meteo**  
Claud controlla meteo e qualità dell'aria locali per suggerirti di camminare o andare in bici quando le condizioni sono favorevoli — e avvisarti quando l'attività all'aperto non è consigliata.

**Consigli intelligenti basati sui dati**  
Ottieni analisi personalizzate dalle tue attività registrate: trend di utilizzo, emettitori ad alto impatto, gap di compensazione, alternative alimentari e opzioni più green con numeri reali in kg CO₂.

**Monitora i trend nel tempo**  
Trend settimanali, ripartizione consumo vs. compensazione e attività più usate ti aiutano a individuare schemi e migliorare.

Abbonamenti e piani lifetime sbloccano l'esperienza completa di trackCO2. Inizia oggi il tuo percorso verso uno stile di vita più sostenibile.

---

## What's New in This Version

**Version 1.0.6**

- Scopri la tua nuova mascotte — Claud ora reagisce al tuo punteggio CO₂ in tempo reale
- Suggerimenti meteo — Claud controlla le condizioni locali per suggerire il momento migliore per camminare, andare in bici o usare i mezzi pubblici
- Suggerimenti attività più intelligenti — analisi basate sui dati con numeri reali di CO₂, trend di utilizzo e consigli pratici
- Un'esperienza più pulita e veloce — schede ridisegnate, navigazione più fluida e layout più intuitivo
- Nuova esperienza Mappe — pianifica viaggi più green con confronto trasporti in tempo reale e stime CO₂ sulla mappa

---

## URLs

| Field | URL |
|---|---|
| **Support URL** | `https://giusscos.com/trackco2/support` |
| **Marketing URL** | `https://giusscos.com/trackco2` |
| **Privacy Policy URL** | `https://giusscos.com/trackco2/privacy` |

---

## Categories

| | Category |
|---|---|
| **Primary** | Health & Fitness |
| **Secondary** | Lifestyle |

---

## Screenshots

See [screenshots.md](./screenshots.md) for device sizes and capture instructions.

### Suggested caption overlays

| # | Screen | Caption |
|---|---|---|
| 1 | Riepilogo | Il tuo CO₂ a colpo d'occhio |
| 2 | Attività | Registra ogni scelta climatica |
| 3 | Viaggi / Mappa | Scegli il percorso più green |
| 4 | Consigli | Consigli basati sui tuoi dati |
| 5 | Meteo | Cammina quando conviene |

### How each screenshot should look

1. **Hero** — Mascotte Claud in salute (verde/menta), grafico CO₂ settimanale, widget meteo visibile.
2. **Attività** — Lista con Viaggio in auto, Treno, Camminata, Consumo di manzo, ecc.
3. **Viaggi** — Mappa urbana con percorso; schede confronto camminata, bus e auto con etichette CO₂.
4. **Consigli** — Scheda consiglio con cifre in kg CO₂ e suggerimento concreto.
5. **Meteo** — Scheda «Ottimo momento per camminare!» con cielo sereno.

Capture on **iPhone 16 Pro Max** (1290×2796) with **Italian** system language.
